# wasm-wasi-identity

./: Cargo.toml  README.md
src/: main.rs
