[package]
name = "hello-world"
version = "0.1.0"
authors = ["huhn511 <sehe89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
identity = { git = "https://github.com/iotaledger/identity.rs", branch = "main"}
